--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@
 # Avoid committing pubspec.lock for library packages; see
 # https://dart.dev/guides/libraries/private-files#pubspeclock.
 pubspec.lock
+
+# Anitomy original
+anitomy_original/test/cpp_test_results.txt
+anitomy_original/test/*.o
+anitomy_original/test/anitomy_test
+anitomy_original/test/debug_test
+anitomy_original/anitomy/**/*.o
+
+# Dart tests
+test/dart_test_results.txt
