Rename to anitomy_dart

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ pubspec.lock
 # Anitomy original
 anitomy_original/test/*.o
 anitomy_original/test/anitomy_test
-anitomy_original/anitomy/**/*.o
+anitomy_original/anitomy/
 
 # Dart tests
 test/REPORT.md
